@@ -261,7 +261,7 @@ AC_SUBST(LIBCROCO_LIBS)
 
 dnl ===========================================================================
 
-AC_CHECK_FUNCS(strtok_r)
+AC_CHECK_FUNCS(strtok_r basename)
 
 dnl ===========================================================================
 
