@@ -1,6 +1,8 @@
 2005-10-06  Dom Lachowicz <cinamod@hotmail.com>
 
 	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
+	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.
+	* configure.in: Ditto
 	
 2005-10-4 Caleb Moore <c.moore@student.unsw.edu.au>
 	
